# Agnost-Hiring-Assessment

./: .env.example  ASSIGNMENT.md  README.md  REASONING.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_core_tables.py
data/: sample_conversations.jsonl
docs/: architecture.md
docs/superpowers/plans/: 2026-05-24-sentiment-analytics-engine.md
docs/superpowers/specs/: 2026-05-24-sentiment-analytics-engine-design.md
scripts/: generate_sample_data.py
src/agnost_analytics/: __init__.py  main.py
src/agnost_analytics/api/: __init__.py  alerts.py  routes.py  schemas.py  topics.py  trends.py
src/agnost_analytics/core/: config.py
src/agnost_analytics/db/: __init__.py  models.py  session.py
src/agnost_analytics/services/: clustering.py  embeddings.py  ingest.py  query.py  sentiment.py  topic_labeling.py  worker.py
tests/: test_alerts_api.py  test_clustering.py  test_health.py  test_ingest_api.py  test_models.py  test_sentiment.py  test_smoke.py  test_topics_api.py  test_trends_api.py  test_worker.py
