[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agnost-analytics"
version = "0.1.0"
description = "Sentiment analytics engine prototype for Agnost"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.130",
  "uvicorn>=0.40",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
